# NebulaCompiler

./: .gitattributes  CMakeLists.txt  README.md  main.ne  process.ne
src/: CMakeLists.txt
src/nbu_backend/: CMakeLists.txt
src/nbu_backend/codeGen/: codegen.cpp  codegen.h
src/nbu_compiler/: CMakeLists.txt  main.cpp
src/nbu_frontend/: CMakeLists.txt
src/nbu_frontend/lexer/: lexer.cpp  lexer.h
src/nbu_frontend/parser/: parser.cpp  parser.h
src/nbu_frontend/semanticAnalyser/: semantic.cpp  semantic.h
src/nbu_frontend/type/: type.cpp  type.h
src/nbu_ir/: CMakeLists.txt
src/nbu_ir/ir/: ir.cpp  ir.h
src/nbu_ir/irTranslator/: irTranslator.cpp  irTranslator.h
src/nbu_lsp/: CMakeLists.txt  nbu-lsp
